nestc/src/lir/snapshots/nestc__lir__tests__lir_snapshot_dividing_by_zero_is_a_check_of_its_own.snap
---
source: src/lir/tests.rs
expression: lir_text(src)
---
unit mem:main {
  type []u8 = struct {           // was a slice; size 16, align 8
    ptr: *u8                    // +0
    len: u64                    // +8
  }
  type core.loc.Location = struct {           // was a struct; size 24, align 8
    file: []u8                    // +0
    line: u32                    // +16
    column: u32                    // +20
  }
  private const const.str.0: [16]u8 = b"division by zero"  // _NK0
  private const const.str.1: [8]u8 = b"mem:main"  // _NK1
  private const const.str.2: [16]u8 = b"integer overflow"  // _NK2

  func by_value(a_0: i32, b_1: i32) -> i32  // _NC8by_value
    let _2: bool
    let _3: []u8
    let _4: []u8
    let _5: core.loc.Location
    let _6: bool
    let _7: bool
    let _8: bool
    let _9: []u8
    let _10: []u8
    let _11: core.loc.Location
    let _12: i32
  bb0:                    // entry
    _2 := ne.i32 b_1, 0
    switch.bool _2 { 1 => bb2, _ => bb1 }
  bb1:                    // division by zero
    _3 := []u8(&const.str.0, 16)
    _4 := []u8(&const.str.1, 8)
    _5 := core.loc.Location(_4, 1, 51)
    call core.fail.panic(_3, _5)
      @safepoint { live: [_3, _5]
        _3 := reloc _3
        _5 := reloc _5
      }
    unreachable
  bb2:
    _6 := eq.i32 a_0, -2147483648
    _7 := eq.i32 b_1, -1
    _8 := bit_and.bool _6, _7
    switch.bool _8 { 1 => bb3, _ => bb4 }
  bb3:                    // integer overflow
    _9 := []u8(&const.str.2, 16)
    _10 := []u8(&const.str.1, 8)
    _11 := core.loc.Location(_10, 1, 51)
    call core.fail.panic(_9, _11)
      @safepoint { live: [_9, _11]
        _9 := reloc _9
        _11 := reloc _11
      }
    unreachable
  bb4:
    _12 := div.i32 a_0, b_1
    return _12

  func by_constant(a_0: i32) -> i32  // _NC11by_constant
    let _1: i32
  bb0:                    // entry
    _1 := rem.i32 a_0, 2
    return _1

  declare func core.fail.panic(msg_0: []u8, loc_1: core.loc.Location) -> never @public  // _NC4core4fail5panic
}
