nestc/src/lir/snapshots/nestc__lir__tests__lir_snapshot_drops_ride_the_ladder_and_calls_are_safepoints.snap
---
source: src/lir/tests.rs
expression: lir_text(src)
---
unit mem:main {
  type Node = struct {           // was a struct; size 4, align 4
    x: i32                    // +0
  }

  internal func report(n_0: i32) -> void  // _NC6report
  bb0:                    // entry
    return

  internal func f(c_0: bool) -> i32  // _NC1f
    let _1: *Node
    let _2: *Node
    let p_3: *Node
    let _4: i32
    let __defer1_5: i32
    let _6: i32
  bb0:                    // entry
    _1 := $new()
      @safepoint { live: [] }
    _2 := _1
    p_3 := _2
    _4 := 0
    __defer1_5 := _4
    switch.bool c_0 { 1 => bb1, _ => bb2 }
  bb1:                    // then
    _6 := p_3.*.x
    goto bb5
  bb2:                    // else
    goto bb3
  bb3:                    // join
    call report(p_3.*.x)
      @safepoint { live: [p_3]
        p_3 := reloc p_3
      }
    _6 := 0
    goto bb5
  bb4:                    // return
    return _6
  bb5:                    // cleanup 0 (return)
    call report(__defer1_5)
      @safepoint { live: [p_3]
        p_3 := reloc p_3
      }
    drop p_3
    goto bb4
}
