nestc/src/lir/snapshots/nestc__lir__tests__lir_snapshot_indexing_a_slice_is_pointer_arithmetic.snap
---
source: src/lir/tests.rs
expression: lir_text(src)
---
unit mem:main {
  type []i32 = struct {           // was a slice; size 16, align 8
    ptr: *i32                    // +0
    len: u64                    // +8
  }
  type []u8 = struct {           // was a slice; size 16, align 8
    ptr: *u8                    // +0
    len: u64                    // +8
  }
  type core.loc.Location = struct {           // was a struct; size 24, align 8
    file: []u8                    // +0
    line: u32                    // +16
    column: u32                    // +20
  }
  type (i32, bool) = struct {           // was a tuple; size 8, align 4
    0: i32                    // +0
    1: bool                    // +4
  }
  private const const.str.1: [19]u8 = b"index out of bounds"  // _NK1
  private const const.str.2: [8]u8 = b"mem:main"  // _NK2
  private const const.str.3: [16]u8 = b"integer overflow"  // _NK3

  func read(s_0: []i32, a_1: [3]i32, k_2: u64) -> i32  // _NC4read
    let _3: *[]i32
    let _4: bool
    let _5: []u8
    let _6: []u8
    let _7: core.loc.Location
    let _8: *i32
    let _9: *[3]i32
    let _10: bool
    let _11: []u8
    let _12: []u8
    let _13: core.loc.Location
    let _14: *i32
    let _15: (i32, bool)
    let _16: []u8
    let _17: []u8
    let _18: core.loc.Location
  bb0:                    // entry
    _3 := &s_0
    _4 := lt.u64 k_2, _3.*.len
    switch.bool _4 { 1 => bb2, _ => bb1 }
  bb1:                    // out of bounds
    _5 := []u8(&const.str.1, 19)
    _6 := []u8(&const.str.2, 8)
    _7 := core.loc.Location(_6, 1, 62)
    call core.fail.panic(_5, _7)
      @safepoint { live: [_5, _7]
        _5 := reloc _5
        _7 := reloc _7
      }
    unreachable
  bb2:
    _8 := _3.*.ptr + k_2 * 4
    _9 := &a_1
    _10 := lt.u64 k_2, 3
    switch.bool _10 { 1 => bb4, _ => bb3 }
  bb3:                    // out of bounds
    _11 := []u8(&const.str.1, 19)
    _12 := []u8(&const.str.2, 8)
    _13 := core.loc.Location(_12, 1, 69)
    call core.fail.panic(_11, _13)
      @safepoint { live: [_11, _13]
        _11 := reloc _11
        _13 := reloc _13
      }
    unreachable
  bb4:
    _14 := &_9.*[k_2]
    _15 := add_checked.i32 _8.*, _14.*
    switch.bool _15.1 { 1 => bb5, _ => bb6 }
  bb5:                    // overflow
    _16 := []u8(&const.str.3, 16)
    _17 := []u8(&const.str.2, 8)
    _18 := core.loc.Location(_17, 1, 62)
    call core.fail.panic(_16, _18)
      @safepoint { live: [_16, _18]
        _16 := reloc _16
        _18 := reloc _18
      }
    unreachable
  bb6:
    return _15.0

  declare func core.fail.panic(msg_0: []u8, loc_1: core.loc.Location) -> never @public  // _NC4core4fail5panic
}
