nestc/src/lir/snapshots/nestc__lir__tests__lir_snapshot_intrinsics_are_operations_not_calls.snap
---
source: src/lir/tests.rs
expression: lir_text(src)
---
unit mem:main {
  type []u8 = struct {           // was a slice; size 16, align 8
    ptr: *u8                    // +0
    len: u64                    // +8
  }
  type core.rt.loc.Location = struct {           // was a struct; size 24, align 8
    file: []u8                    // +0
    line: u32                    // +16
    column: u32                    // +20
  }
  type (u64, bool) = struct {           // was a tuple; size 16, align 8
    0: u64                    // +0
    1: bool                    // +8
  }
  private const const.str.2: [16]u8 = b"integer overflow"  // _NK2
  private const const.str.3: [8]u8 = b"mem:main"  // _NK3

  internal func sizes() -> u64  // _NC5sizes
    let _0: (u64, bool)
    let _1: []u8
    let _2: []u8
    let _3: core.rt.loc.Location
  bb0:                    // entry
    _0 := add_checked.u64 5, 1
    switch.bool _0.1 { 1 => bb1, _ => bb2 }
  bb1:                    // overflow
    _1 := []u8(&const.str.2, 16)
    _2 := []u8(&const.str.3, 8)
    _3 := core.rt.loc.Location(_2, 3, 36)
    call core.rt.fail.panic(_1, _3)
      @safepoint { live: [_1, _3]
        _1 := reloc _1
        _3 := reloc _3
      }
    unreachable
  bb2:
    return _0.0

  declare func core.rt.fail.panic(msg_0: []u8, loc_1: core.rt.loc.Location) -> never @public  // _NC4core2rt4fail5panic
}
