nestc/src/lir/snapshots/nestc__lir__tests__lir_snapshot_matching_on_things_that_are_not_enums.snap
---
source: src/lir/tests.rs
expression: lir_text(src)
---
unit mem:main {
  type []i32 = struct {           // was a slice; size 16, align 8
    ptr: *i32                    // +0
    len: u64                    // +8
  }
  type Point = struct {           // was a struct; size 8, align 4
    x: i32                    // +0
    y: i32                    // +4
  }
  type []u8 = struct {           // was a slice; size 16, align 8
    ptr: *u8                    // +0
    len: u64                    // +8
  }
  type core.Location = struct {           // was a struct; size 24, align 8
    file: []u8                    // +0
    line: u32                    // +16
    column: u32                    // +20
  }
  type (i32, bool) = struct {           // was a tuple; size 8, align 4
    0: i32                    // +0
    1: bool                    // +4
  }
  private const const.str.0: [16]u8 = b"integer overflow"  // _NK0
  private const const.str.1: [8]u8 = b"mem:main"  // _NK1

  func letter(c_0: u32) -> i32  // _NC6letter
    let _1: i32
    let _2: bool
    let _3: bool
    let _4: bool
  bb0:                    // entry
    _2 := eq.u32 c_0, 97
    switch.bool _2 { 1 => bb7, _ => bb6 }
  bb1:                    // join
    return _1
  bb2:                    // arm 'a'
    _1 := 1
    goto bb1
  bb3:                    // arm pattern
    _1 := 2
    goto bb1
  bb4:                    // arm _
    _1 := 0
    goto bb1
  bb5:                    // unreachable
    unreachable
  bb6:
    goto bb10
  bb7:
    goto bb2
  bb8:
    goto bb4
  bb9:
    goto bb3
  bb10:
    _3 := eq.u32 c_0, 98
    switch.bool _3 { 1 => bb12, _ => bb11 }
  bb11:
    _4 := eq.u32 c_0, 99
    switch.bool _4 { 1 => bb13, _ => bb8 }
  bb12:
    goto bb9
  bb13:
    goto bb9

  func scale(f_0: f64) -> i32  // _NC5scale
    let _1: i32
    let _2: bool
    let _3: bool
  bb0:                    // entry
    _2 := eq.f64 f_0, 0.0
    switch.bool _2 { 1 => bb7, _ => bb6 }
  bb1:                    // join
    return _1
  bb2:                    // arm 0.0
    _1 := 0
    goto bb1
  bb3:                    // arm 1.5
    _1 := 1
    goto bb1
  bb4:                    // arm _
    _1 := 2
    goto bb1
  bb5:                    // unreachable
    unreachable
  bb6:
    _3 := eq.f64 f_0, 1.5
    switch.bool _3 { 1 => bb9, _ => bb8 }
  bb7:
    goto bb2
  bb8:
    goto bb4
  bb9:
    goto bb3

  func flag(b_0: bool) -> i32  // _NC4flag
    let _1: i32
    let _2: bool
    let _3: bool
  bb0:                    // entry
    _2 := eq.bool b_0, true
    switch.bool _2 { 1 => bb6, _ => bb5 }
  bb1:                    // join
    return _1
  bb2:                    // arm true
    _1 := 1
    goto bb1
  bb3:                    // arm false
    _1 := 0
    goto bb1
  bb4:                    // unreachable
    unreachable
  bb5:
    _3 := eq.bool b_0, false
    switch.bool _3 { 1 => bb7, _ => bb4 }
  bb6:
    goto bb2
  bb7:
    goto bb3

  func ends(xs_0: []i32) -> i32  // _NC4ends
    let _1: i32
    let _2: bool
    let _3: bool
    let _4: *i32
    let only_5: i32
    let _6: bool
    let _7: *i32
    let first_8: i32
    let _9: u64
    let _10: *i32
    let last_11: i32
    let _12: (i32, bool)
    let _13: []u8
    let _14: []u8
    let _15: core.Location
  bb0:                    // entry
    _2 := eq.u64 xs_0.len, 0
    switch.bool _2 { 1 => bb7, _ => bb6 }
  bb1:                    // join
    return _1
  bb2:                    // arm pattern
    _1 := 0
    goto bb1
  bb3:                    // arm pattern
    _1 := only_5
    goto bb1
  bb4:                    // arm pattern
    _12 := add_checked.i32 first_8, last_11
    switch.bool _12.1 { 1 => bb11, _ => bb12 }
  bb5:                    // unreachable
    unreachable
  bb6:
    _3 := eq.u64 xs_0.len, 1
    switch.bool _3 { 1 => bb9, _ => bb8 }
  bb7:
    goto bb2
  bb8:
    _6 := ge.u64 xs_0.len, 2
    switch.bool _6 { 1 => bb10, _ => bb5 }
  bb9:
    _4 := xs_0.ptr + 0 * 4
    only_5 := _4.*
    goto bb3
  bb10:
    _7 := xs_0.ptr + 0 * 4
    first_8 := _7.*
    _9 := sub.u64 xs_0.len, 1
    _10 := xs_0.ptr + _9 * 4
    last_11 := _10.*
    goto bb4
  bb11:                    // overflow
    _13 := []u8(&const.str.0, 16)
    _14 := []u8(&const.str.1, 8)
    _15 := core.Location(_14, 26, 26)
    call core.panic(_13, _15)
      @safepoint { live: [_13, _15]
        _13 := reloc _13
        _15 := reloc _15
      }
    unreachable
  bb12:
    _1 := _12.0
    goto bb1

  func corner(p_0: Point) -> i32  // _NC6corner
    let _1: i32
    let _2: bool
    let _3: bool
    let x_4: i32
    let _5: bool
    let y_6: i32
  bb0:                    // entry
    _2 := eq.i32 p_0.x, 0
    switch.bool _2 { 1 => bb7, _ => bb6 }
  bb1:                    // join
    return _1
  bb2:                    // arm pattern
    _1 := 0
    goto bb1
  bb3:                    // arm pattern
    _1 := x_4
    goto bb1
  bb4:                    // arm pattern
    _1 := y_6
    goto bb1
  bb5:                    // unreachable
    unreachable
  bb6:
    x_4 := p_0.x
    _5 := eq.i32 p_0.y, 0
    switch.bool _5 { 1 => bb10, _ => bb9 }
  bb7:
    _3 := eq.i32 p_0.y, 0
    switch.bool _3 { 1 => bb8, _ => bb6 }
  bb8:
    goto bb2
  bb9:
    y_6 := p_0.y
    goto bb4
  bb10:
    goto bb3

  declare func core.panic(msg_0: []u8, loc_1: core.Location) -> never @public  // _NC4core5panic
}
