nestc/src/lir/snapshots/nestc__lir__tests__lir_snapshot_places_are_paths.snap
---
source: src/lir/tests.rs
expression: lir_text(src)
---
unit mem:main {
  type Outer = struct {           // was a struct; size 4, align 4
    i: Inner                    // +0
  }
  type Inner = struct {           // was a struct; size 4, align 4
    v: i32                    // +0
  }
  type []i32 = struct {           // was a slice; size 16, align 8
    ptr: *i32                    // +0
    len: u64                    // +8
  }
  type []u8 = struct {           // was a slice; size 16, align 8
    ptr: *u8                    // +0
    len: u64                    // +8
  }
  type core.loc.Location = struct {           // was a struct; size 24, align 8
    file: []u8                    // +0
    line: u32                    // +16
    column: u32                    // +20
  }
  private const const.str.2: [19]u8 = b"index out of bounds"  // _NK2
  private const const.str.3: [8]u8 = b"mem:main"  // _NK3

  internal func reach(o_0: *Outer, xs_1: []i32, k_2: u64) -> void  // _NC5reach
    let _3: *[]i32
    let _4: bool
    let _5: []u8
    let _6: []u8
    let _7: core.loc.Location
    let _8: *i32
  bb0:                    // entry
    o_0.*.i.v = 1
    _3 := &xs_1
    _4 := lt.u64 k_2, _3.*.len
    switch.bool _4 { 1 => bb2, _ => bb1 }
  bb1:                    // out of bounds
    _5 := []u8(&const.str.2, 19)
    _6 := []u8(&const.str.3, 8)
    _7 := core.loc.Location(_6, 5, 3)
    call core.fail.panic(_5, _7)
      @safepoint { live: [_5, _7]
        _5 := reloc _5
        _7 := reloc _7
      }
    unreachable
  bb2:
    _8 := _3.*.ptr + k_2 * 4
    _8.* = o_0.*.i.v
    return

  declare func core.fail.panic(msg_0: []u8, loc_1: core.loc.Location) -> never @public  // _NC4core4fail5panic
}
