nestc/src/lir/snapshots/nestc__lir__tests__lir_snapshot_short_circuit_is_control_flow.snap
---
source: src/lir/tests.rs
expression: lir_text(src)
---
unit mem:main {

  func both(a_0: bool, b_1: bool) -> bool  // _NC4both
    let _2: bool
  bb0:                    // entry
    _2 := a_0
    switch.bool a_0 { 1 => bb1, _ => bb2 }
  bb1:                    // && rhs
    _2 := b_1
    goto bb2
  bb2:                    // join
    return _2
}
